@startuml

title __LINKINTEGRITY's Class Diagram__\n

  namespace linkintegrity {
    class linkintegrity.LinkServices {
    }
  }
  

  namespace linkintegrity {
    class linkintegrity.LinkServices {
    }
  }
  

  namespace linkintegrity {
    class linkintegrity.ValidationMethods {
    }
  }
  

  namespace linkintegrity {
    class linkintegrity.ValidationMethods {
    }
  }
  

  namespace userinterface {
    class userinterface.FrontPage {
    }
  }
  

  namespace userinterface {
    class userinterface.FrontPage {
    }
  }
  

  namespace userinterface {
    class userinterface.Statistics {
    }
  }
  

  namespace userinterface {
    class userinterface.Statistics {
    }
  }
  

  userinterface.FrontPage -up-|> javax.swing.JFrame
  userinterface.FrontPage -up-|> javax.swing.JFrame
  userinterface.Statistics -up-|> javax.swing.JFrame
  userinterface.Statistics -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
